--- a/requirements.txt
+++ b/requirements.txt
@@ -14,9 +14,11 @@ idna==3.7
 oauthlib==3.2.2
 proto-plus==1.24.0
 protobuf==5.27.3
+psycopg2-binary==2.9.9
 pyasn1==0.6.0
 pyasn1_modules==0.4.0
 pyparsing==3.1.2
+pytz==2024.2
 requests==2.32.3
 requests-oauthlib==2.0.0
 rsa==4.9
