--- a/requirements.txt
+++ b/requirements.txt
@@ -9,9 +9,11 @@ google-auth==2.33.0
 google-auth-httplib2==0.2.0
 google-auth-oauthlib==1.2.1
 googleapis-common-protos==1.63.2
+gunicorn==23.0.0
 httplib2==0.22.0
 idna==3.7
 oauthlib==3.2.2
+packaging==24.1
 proto-plus==1.24.0
 protobuf==5.27.3
 psycopg2-binary==2.9.9
